--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-and-test:
@@ -23,8 +23,17 @@ jobs:
 
       - name: Run container for testing
         run: |
-          docker run -d -p 8080:80 --name ci-test intern-nginx-ci
+          docker run -d \
+            -e NGINX_PORT=80 \
+            -p 8080:80 \
+            --name ci-test \
+            intern-nginx-ci
           sleep 5
+
+      - name: Debug container status
+        run: |
+          docker ps -a
+          docker logs ci-test || true
 
       - name: Health check
         run: |
