--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 services:
   app:
+    build: .
     image: intern-nginx
     container_name: app-container
-    environment:
-      - NGINX_PORT=80
+    env_file:
+      - .env
     networks:
       - app-network
 
@@ -11,12 +12,14 @@ services:
     image: nginx:alpine
     container_name: nginx-proxy
     ports:
-      - "8080:80"
+      - "${HOST_PORT}:80"
     volumes:
       - ./proxy.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
     restart: always
+    env_file:
+      - .env
     networks:
       - app-network
 
