--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Run container for testing
         run: |
           docker run -d \
-            -e NGINX_PORT=80 \
-            -p 8080:80 \
+            -e NGINX_PORT=${CONTAINER_PORT} \
+            -p ${HOST_PORT}:${CONTAINER_PORT} \
             --name ci-test \
             intern-nginx-ci
-          sleep 5
+
 
       - name: Debug container status
         run: |
