--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,12 @@ services:
     container_name: app-container
     env_file:
       - .env
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+    restart: always
     networks:
       - app-network
 
@@ -12,9 +18,12 @@ services:
     image: nginx:alpine
     container_name: nginx-proxy
     ports:
-      - "${HOST_PORT}:80"
+      - "${HOST_PORT}:${NGINX_PORT}"
     volumes:
-      - ./proxy.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx-proxy.conf.template:/etc/nginx/templates/default.conf.template
+    environment:
+      - APP_PORT=${APP_PORT}
+      - NGINX_PORT=${NGINX_PORT}
     depends_on:
       - app
     restart: always
